Fixes layout issues on tablet view by adjusting heights and margins for better content display.

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ html{
 
 .slide{
     width: 100%;
-    height: 100vh;
+    height: 100vh; 
     justify-content: center;
     align-items: center;
     display: flex;
@@ -990,7 +990,7 @@ html{
 
 @media (min-width: 769px) and (max-width: 1024px){
     .menu-slide1{
-        height: 70vh;
+        height: max-content;
     }
     
     .menu-container-flex{
@@ -998,6 +998,7 @@ html{
         height: auto;
         gap: 30px;
         flex-wrap: wrap;
+        margin: 50px auto 50px auto;
     }
 
     .menu-card{
@@ -1187,7 +1188,7 @@ html{
         height: auto;
     }
     .visit-title-container{
-        margin: 50px auto 50px auto;
+        margin: 50px auto 50px 50px;
     }
     .visit-title-container h1{
         font-size: 5rem;
